fix: use nocodb-sdk instead of fetch
